--- a/Resources/layout/layout1.axml
+++ b/Resources/layout/layout1.axml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+	android:layout_height="230dp"
     android:gravity="center_horizontal"
     android:padding="10dp">
     <android.support.v7.widget.CardView
