--- a/Resources/layout/plan_main.axml
+++ b/Resources/layout/plan_main.axml
@@ -11,7 +11,7 @@
 		android:background="@android:color/darker_gray" />
 
 		<TextView
-		android:text="リマインダー時刻"
+		android:text="時刻"
 		android:layout_width="match_parent"
 		android:layout_marginLeft="30dp"
 		android:layout_marginTop="10dp"
@@ -67,6 +67,7 @@
 
 		</LinearLayout>
 
+		
 		<View
 			android:layout_width="match_parent"
 			android:layout_marginTop="10dp"
